--- a/dockerfiles/Dockerfile-bridge
+++ b/dockerfiles/Dockerfile-bridge
@@ -1,11 +1,14 @@
 FROM --platform=linux/arm64/v8 python:3.12-slim
 # FROM mcp/memory:latest
 
-# Install Python for the bridge
-# RUN apk add --no-cache python3 py3-pip bash curl git nodejs npm unzip
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    git \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install ngrok
-RUN apt-get update && apt-get install -y curl wget unzip && rm -rf /var/lib/apt/lists/*
 RUN curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | \
     tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && \
     echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | \
@@ -13,17 +16,23 @@ RUN curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | \
     apt-get update && \
     apt-get install -y ngrok
 
-# Copy Python bridge
 WORKDIR /bridge
+
+# Copy requirements
 COPY .ngrok requirements/bridge.txt knowledge.py ./
-RUN pip3 install --break-system-packages --no-cache-dir -r bridge.txt
 
-# Clone MCP server
-# RUN git clone https://github.com/modelcontextprotocol/servers.git mcp
-# WORKDIR /bridge/mcp/src/memory
-# RUN npm install --silent --no-progress --legacy-peer-deps
-# RUN npm ci --ignore-scripts --omit-dev
-# RUN npm run build
+# Install Python dependencies
+RUN pip install --break-system-packages --no-cache-dir -r bridge.txt
 
+# Install mcp-memory (the MCP server that runs in stdio mode)
+RUN pip install --no-cache-dir mcp-memory
+
+# Expose port for the bridge server
 EXPOSE 8000
-CMD ["python3", "/bridge/knowledge.py"]
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the FastAPI bridge server
+CMD ["python", "-m", "uvicorn", "knowledge:app", "--host", "0.0.0.0", "--port", "8000"]
